--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pyparsing==2.4.7
 pytest==6.2.5
 pytest-django==3.8.0
 pytest-pythonpath==0.7.3
+python-dotenv==0.19.2
 python3-openid==3.2.0
 pytz==2021.1
 requests==2.26.0
