--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ Django==2.2.19
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
+gunicorn==20.0.4
+psycopg2-binary==2.8.6
 djoser==2.1.0
 idna==3.3
 importlib-metadata==1.7.0
